--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
   <title>Grab</title>
 </head>
 <body>
-  
+  <main class="main-content">
+    <div class="logo">
+      <img src="assets/img/logo-grab.svg" alt="Logo Grab">
+    </div>
+
+    <form class="formulario">
+      <div>
+        <input type="email" name="email" id="email" required>
+        <!-- <p class="error">Por favor, insira um email válido.</p> -->
+      </div>
+      <div>
+        <input type="password" name="password" id="password" required>
+        <!-- <p class="error">Por favor, insira uma senha.</p> -->
+      </div>
+      <button type="submit">Entrar</button>
+    </form>
+  </main>
   <script src="assets/js/script.js"></script>
 </body>
 </html>
