--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     <form class="formulario">
       <div>
-        <input type="email" name="email" id="email" required>
-        <!-- <p class="error">Por favor, insira um email válido.</p> -->
+        <input type="email" name="email" id="email">
+        <p class="error"></p>
       </div>
       <div>
-        <input type="password" name="password" id="password" required>
-        <!-- <p class="error">Por favor, insira uma senha.</p> -->
+        <input type="password" name="password" id="password">
+        <p class="error"></p>
       </div>
       <button type="submit">Entrar</button>
     </form>
