--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <button type="submit">Entrar</button>
     </form>
   </main>
+
+  <div class="hero-img">
+    <img src="assets/img/undraw_interview_rmcf.svg" alt="">
+  </div>
   <script src="assets/js/script.js"></script>
 </body>
 </html>
