--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       </div>
       <button type="submit">Entrar</button>
     </form>
+
+    <p class="ajuda">
+      problemas para entrar?
+      <a href="#">Clique aqui</a>
+    </p>
   </main>
 
   <div class="hero-img">
